@startuml
skinparam classFontSize 14
title __APP's Class Diagram__\n

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.ActivityAdapter {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.ActivityViewHolder {
    }
  }
  

  namespace com.example.android.gpslog_test {
    abstract class com.example.android.gpslog_test.AppDatabase {
    }
  }
  

  namespace com.example.android.gpslog_test {
    interface com.example.android.gpslog_test.AppDatabaseDao {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.AppDatabaseDao_Impl {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.AppDatabase_Impl {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.AppRepository {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.AppViewModel {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.BuildConfig {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.ChartManage {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.ExerciseEntity {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.LocManage {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.MainActivity {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.MapManage {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.TrackEntity {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.TypeEntity {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.Utils {
    }
  }
  

  namespace com.example.android.gpslog_test {
    class com.example.android.gpslog_test.VerticalTextView {
    }
  }
  

  com.example.android.gpslog_test.ActivityAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.android.gpslog_test.ActivityAdapter o-- com.example.android.gpslog_test.ActivityAdapter.OnItemClickListener : listener
  com.example.android.gpslog_test.ActivityViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.android.gpslog_test.AppDatabase -up-|> androidx.room.RoomDatabase
  com.example.android.gpslog_test.AppDatabaseDao_Impl .up.|> com.example.android.gpslog_test.AppDatabaseDao
  com.example.android.gpslog_test.AppDatabase_Impl -up-|> com.example.android.gpslog_test.AppDatabase
  com.example.android.gpslog_test.AppDatabase_Impl o-- com.example.android.gpslog_test.AppDatabaseDao : _appDatabaseDao
  com.example.android.gpslog_test.AppRepository o-- com.example.android.gpslog_test.AppDatabaseDao : appDatabaseDao
  com.example.android.gpslog_test.AppViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.android.gpslog_test.AppViewModel o-- com.example.android.gpslog_test.AppRepository : mRepository
  com.example.android.gpslog_test.ChartManage .up.|> com.github.mikephil.charting.listener.OnChartValueSelectedListener
  com.example.android.gpslog_test.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.android.gpslog_test.MainActivity o-- com.example.android.gpslog_test.AppViewModel : appViewModel
  com.example.android.gpslog_test.VerticalTextView -up-|> androidx.appcompat.widget.AppCompatTextView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
